--- a/src/styles.css
+++ b/src/styles.css
@@ -55,6 +55,10 @@ img{
 .navbar-nav .nav-link:hover {
     color: #555;
 }
+.nav-item .active{
+    background-color: #032B30;
+    border-radius: 20px;
+}
 
 .footer {
     background-color: #f8f9fa;
