--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 :root{
     --black: black;
     --white: white;
-    --font-family: 'Arial', sans-serif;
+    --font-family: 'Saira', 'Arial', sans-serif;
 }
 *{
     margin: 0;
@@ -13,9 +13,13 @@
     font-family: var(--font-family);
 }
 body{
+  outline: 1px solid black;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+.max-width-content {
+  max-width: 1500px;
 }
 img{
     width: 200px;
@@ -25,12 +29,13 @@ img{
     height: 200px;
 }
 .cont{
+  align-items: center;
     width: 100%;
-    max-width: 1500px;
     margin: 0;
     padding: 0;
 }
 .jumbotron {
+  align-items: center;
     padding: 0;
     background-image: url('https://ik.imagekit.io/jlez6y282/compressed/hero-world.jpg?updatedAt=1721758475912');
     background-size: cover;
@@ -46,6 +51,9 @@ img{
     backdrop-filter: blur(20px);
     color: var(--white);
     width: 100%;
+}
+.btn{
+  border-radius: 20px;
 }
 
 .navbar-nav .nav-link {
@@ -89,6 +97,10 @@ img{
     width: 20px;
     height: 20px;
 }
+.explore img{
+  width: 509;
+  height: 324;
+}
 
 @media (max-width: 991px) {
     .navitems {
@@ -102,6 +114,12 @@ img{
 }
 .carousel-item img{
     height: 80vh;
+}
+@media (max-width: 991px) {
+  .carousel-item img{
+    max-height: 50vh;
+    aspect-ratio: 1/ 0.75;
+  }
 }
 #carouselExampleCaptions {
     position: relative;
@@ -155,6 +173,9 @@ img{
     aspect-ratio: 1 / 0.6;
   }
   /* user.html */
+  .side-width{
+    width: 217px;
+  }
   .usernav, footer{
     background-color: rgba(49, 95, 102, 0.5);
   }
@@ -180,7 +201,7 @@ img{
   }
   .userhero{
     background-image: url("https://ik.imagekit.io/jlez6y282/compressed/portada.png?updatedAt=1722238695266");
-    height: 350px;
+    height: 150px;
   }
   .profile img{
     width: 120px;
@@ -199,18 +220,16 @@ img{
   }
  
   /* tour.html */
-.tron {
-    background-image: url('https://ik.imagekit.io/jlez6y282/compressed/tr:w-1200/new-york%20(2).jpg?updatedAt=1721758578475');
+  .tron {
+    align-items: center;
+    background-image: url('./images/hero.svg');
     background-size: cover;
-    background-position: 40%;
+    background-position: 80%;
     background-repeat: no-repeat;
     color: white;
     min-height: 85vh;
     max-height: fit-content;
-}
-.york h1{
-    font-family: 'Indie Flower';
-}
+  }
 .tour{
     width: 90%;
 }
